--- a/html/product.html
+++ b/html/product.html
@@ -71,14 +71,15 @@
           <div>
             <h3 class="mb-8 md">顏色</h3>
             <div class="d-flex mb-32">
-                <div class="product-color mr-8">
-                    <img src="../img/product.png" alt="藍色" class="mb-4">
-                    <p>藍色</p>
-                </div>
-                <div class="product-color">
-                    <img src="../img/product-1.png" alt="卡其色" class="mb-4">
-                    <p>卡其色</p>
-                </div>
+                <button type="button" class="product-color mr-8">
+                 <img src="../img/product.png" alt="藍色" class="mb-4">
+                 <p>藍色</p>
+                </button>
+
+                <button type="button" class="product-color">
+                 <img src="../img/product-1.png" alt="卡其色" class="mb-4">
+                 <p>卡其色</p>
+                </button>
 
 
             </div>
@@ -173,7 +174,7 @@
       </div>
 
         <footer class="footer pt-64">
-      <div class="container d-flex justify-between pb-24">
+      <div class="container  d-flex justify-between pb-24">
           <a href="story.html"><img src="../img/logo.svg" alt=""></a>
          <ul class="d-flex align-center">
           <li><a href="products.html" class="py-12 mr-40">商品列表</a></li>
