--- a/html/story.html
+++ b/html/story.html
@@ -13,22 +13,25 @@
 </head>
 <body>
   
-   <nav class="  py-16 py-sm-12 px-sm-12 d-flex align-center justify-between">
-     <ul class="d-flex align-center">
-     <li class="mr-48"><a href="story.html">
-        <img src="../img/logo.svg" alt=""></a></li>
+   <nav class="py-16 py-sm-12 px-sm-12 d-flex align-center justify-between">
+    <div class="d-flex">
+     <h1 class="mr-48"><a href="story.html">
+        <img src="../img/logo.svg" alt="logo"></a></h1>
+
+     <ul class="d-flex text-left ">
      <li class="mr-40 d-sm-none"><a href="products.html" class="py-12">商品列表</a></li>
      <li><a href="story.html" class="py-12 black d-sm-none">品牌故事</a></li>
      </ul>
-     <a href="#" class="py-12 py-sm-12"><i class="bi bi-person"></i></a>
-    </nav>
+    </div>
+    <a href="#" class="py-12 py-sm-12"><i class="bi bi-person"></i></a>
+  </nav>
     
     <section class="header">
-  <h1 class="h3-md">品牌故事</h1>
+  <h2 class="h3-md">品牌故事</h2>
   <h3 class="eng-title">Brand Story</h3>
 </section>
 
-<main class="content m-md-12">
+<main class="content mx-md-12">
 
   <div class="container mb-md-32">
     <section class="slogan  mb-48 col-md-4 p-md-24 mb-md-3 ">
@@ -43,12 +46,13 @@
     </div>
     </div>
    <div class="row justify-center">
-    <div class="col-8 col-md-4"></div>
+    <div class="col-md-4">
     <div class="gray-line">
       <h4 class="h4 h5-md mb-md-16">品牌簡介</h4>
       <h5 class=" h5 h6-md green pt-md-0 mb-md-12">URBNSTEP 是來自台灣的街頭機能鞋品牌，致力於打造「風格與功能並存」的鞋履體驗。</h5>
       <p class="mb-md-12">在城市與日常的交錯中，我們看見了步伐的力量。URBNSTEP 誕生於一群設計師與文化觀察者的交會點——一個相信風格應該來自「真實場景」而非伸展台的團隊。從都市的清晨街角，到午後光影灑落的人行道，我們捕捉的是那些不被刻意編排的時刻，那些用一雙鞋踏出的態度與節奏。每一款鞋的誕生，不只是設計與工藝的結晶，更是一段來自城市靈感的延伸，我們相信：鞋，是穿在腳上的語言。</p>
       <p class="mb-48 mb-md-32 mb-md-12">URBNSTEP 的名字來自 Urban + Step，代表著我們對每一個走進城市生活的人致敬。我們不追逐潮流，我們關注輪廓、材質、穿著者的心境與身型，創造能陪伴你走進自我節奏的經典之作。選用高品質麂皮、織物與天然橡膠大底，並與獨立插畫家、攝影師合作，打造具有街頭詩意的形象風格。URBNSTEP 相信，美不是炫耀，而是由內而外的呼吸——一雙鞋，剛好說出你心中的樣子。</p>
+    </div>
     </div>
    
 </div>  
@@ -73,9 +77,11 @@
     <div class="gray-line mb-64 mb-sm-0">
       <h4 class=" h4 h5-md mt-md-32  mb-md-16 mt-48 mb-24">品牌小故事</h4>
       <div class="move-left2 inline">
-        <a href="#" class="mb-16 green"><i class="bi bi-arrow-up-right"></i><span class="move-right green-bt-line md">創辦人筆記：我們為什麼想做鞋？</span></a>
-        <a href="#" class="mb-16 green"><i class="bi bi-arrow-up-right"></i><span class="move-right green-bt-line md">穿上 URBNSTEP 的他們</span></a>
-        <a href="#" class="mb-48 green"><i class="bi bi-arrow-up-right"></i><span class="move-right green-bt-line md mb-md-32">URBNSTEP 鞋履的誕生過程</span></a>
+        <ul>
+        <li><a href="#" class="mb-16 green"><i class="bi bi-arrow-up-right"></i><span class="move-right green-bt-line md">創辦人筆記：我們為什麼想做鞋？</span></a></li>
+        <li><a href="#" class="mb-16 green"><i class="bi bi-arrow-up-right"></i><span class="move-right green-bt-line md">穿上 URBNSTEP 的他們</span></a></li>
+        <li><a href="#" class="mb-48 green"><i class="bi bi-arrow-up-right"></i><span class="move-right green-bt-line md mb-md-32">URBNSTEP 鞋履的誕生過程</span></a></li>
+        </ul>
       </div>
     </div>
    </div> 
